--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.profesorfalken</groupId>
+            <artifactId>jPowerShell</artifactId>
+            <version>1.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
