--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.siblion.nesterov.soapWebService</groupId>
-    <artifactId>soapWebService</artifactId>
-    <version>1.0.0</version>
+    <groupId>ru.siblion.nesterov.logreader</groupId>
+    <artifactId>logreader</artifactId>
+    <packaging>war</packaging>
+    <version>1.0.1</version>
 
     <dependencies>
         <dependency>
@@ -14,13 +15,6 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-configuration2</artifactId>
-            <version>2.1</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -65,6 +59,14 @@
                 <version>2.5.1</version>
                 <configuration>
                     <ejbVersion>3.1</ejbVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>
                 </configuration>
             </plugin>
 
