--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>fop</artifactId>
             <version>2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
